# hypofetch

./: Cargo.toml  PKGBUILD  README.md  build.sh
hypo/distro/: Arch_Linux  Fedora  Ubuntu
src/: logo.rs  main.rs
