[package]
name = "hypofetch"
authors = ["shykeiichi <mail@keii.dev>"]
homepage = "https://github.com/shykeiichi/hypofetch"
readme = "README.md"
description = "A criminally fast and simple system info fetching tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "*"
colored = "*"
uptime_lib = "*"
humantime = "*"
json = "*"
